crustrace-core/tests/snapshots/patterns__pub_async_unsafe_function.snap
---
source: crustrace-core/tests/patterns.rs
expression: apply_trace_all(input)
---
pub async unsafe fn hello() {
    let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "hello");
    let __tracing_attr_guard = __tracing_attr_span.enter();
    {
        println!("world");
    }
}
